# homeassistant-combustion

./: .devcontainer.json  .editorconfig  .gitignore  .ruff.toml  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  configuration.yaml  devcontainer.json
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/combustion/: __init__.py  binary_sensor.py  bluetooth_listener.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py
custom_components/combustion/combustion_ble/: _parser.py  advertising_data.py  battery_status_virtual_sensors.py  ble_manager.py  ble_probe.py  ble_repeater.py  combustion_probe_data.py  connection_manager.py  const.py  device_manager.py  dfu_manager.py  exceptions.py  instant_read_filter.py  logged_probe_data_count.py  message_handlers.py  parser.py  probe_temperature_log.py
custom_components/combustion/combustion_ble/ble_data/: __init__.py  advertising_data.py  battery_status_virtual_sensors.py  prediction_log.py  prediction_mode.py  prediction_state.py  prediction_status.py  prediction_type.py  probe_status.py  virtual_sensors.py
custom_components/combustion/combustion_ble/devices/: device.py  meat_net_node.py  probe.py
custom_components/combustion/combustion_ble/prediction/: prediction_info.py  prediction_manager.py
scripts/: develop  setup
test_results/: pytest.xml
tests/: __init__.py  conftest.py  test_config_flow.py  test_init.py
tests/utils/: bt_utils.py
(+13 files in other folders)
