[tool.poetry]
name = "homeassistant-combustion"
version = "0.0.0"
description = ""
authors = ["Larry Gregory <lgregorydev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "combustion", from = "custom_components" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bitstring = "^4.1.4"

[tool.poetry.group.dev.dependencies]
bluetooth_sensor_state_data = ">=1.6.1"
colorlog = "==6.8.0"
homeassistant = "==2023.11.1"
pip = ">=21.0,<23.4"
ruff = "==0.2.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.1"
pytest-cov = ">=4.0.0"
pytest-homeassistant-custom-component = ">=0.13.45"
bleak-retry-connector = "==3.4.0"
pyserial = "==3.5"
bluetooth-adapters = "==0.17.0"
bluetooth-auto-recovery = "==1.3.0"
aiohttp_cors = "==0.7.0"
pyudev = "==0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.coverage.html]
directory = "test_results/cov_html"

[tool.coverage.xml]
output = "test_results/cov_xml/coverage.xml"

[tool.pytest.ini_options]
addopts = [
    "-rxf",
    "-x",
    "-v",
    "-l",
    "--asyncio-mode=auto",
    "--junitxml=test_results/pytest.xml",
    "--cov=./custom_components",
    "--cov-report=xml",
    "--cov-report=html",
]
filterwarnings = []
testpaths = ["tests"]
python_files = ["test_*.py"]
